--- a/.github/workflows/extension_workflow_rollout.yml
+++ b/.github/workflows/extension_workflow_rollout.yml
@@ -7,6 +7,7 @@ on:
   workflow_dispatch: {}
 jobs:
   fetch_extension_repos:
+    if: (github.repository_owner == 'zed-industries' || github.repository_owner == 'zed-extensions')
     runs-on: namespace-profile-2x4-ubuntu-2404
     steps:
     - id: list-repos
@@ -33,7 +34,7 @@ jobs:
   rollout_workflows_to_extension:
     needs:
     - fetch_extension_repos
-    if: needs.fetch_extension_repos.outputs.repos != '[]'
+    if: (github.repository_owner == 'zed-industries' || github.repository_owner == 'zed-extensions') && needs.fetch_extension_repos.outputs.repos != '[]'
     runs-on: namespace-profile-2x4-ubuntu-2404
     strategy:
       matrix:
@@ -158,6 +159,7 @@ jobs:
   create_rollout_tag:
     needs:
     - rollout_workflows_to_extension
+    if: (github.repository_owner == 'zed-industries' || github.repository_owner == 'zed-extensions')
     runs-on: namespace-profile-2x4-ubuntu-2404
     steps:
     - id: generate-token
