--- a/.github/workflows/run_bundling.yml
+++ b/.github/workflows/run_bundling.yml
@@ -12,8 +12,11 @@ on:
 jobs:
   bundle_linux_aarch64:
     if: |-
-      (github.event.action == 'labeled' && github.event.label.name == 'run-bundling') ||
-      (github.event.action == 'synchronize' && contains(github.event.pull_request.labels.*.name, 'run-bundling'))
+      (github.repository_owner == 'zed-industries' || github.repository_owner == 'zed-extensions') &&
+      (
+        (github.event.action == 'labeled' && github.event.label.name == 'run-bundling') ||
+        (github.event.action == 'synchronize' && contains(github.event.pull_request.labels.*.name, 'run-bundling'))
+      )
     runs-on: namespace-profile-8x32-ubuntu-2004-arm-m4
     env:
       CARGO_INCREMENTAL: 0
@@ -51,8 +54,11 @@ jobs:
     timeout-minutes: 60
   bundle_linux_x86_64:
     if: |-
-      (github.event.action == 'labeled' && github.event.label.name == 'run-bundling') ||
-      (github.event.action == 'synchronize' && contains(github.event.pull_request.labels.*.name, 'run-bundling'))
+      (github.repository_owner == 'zed-industries' || github.repository_owner == 'zed-extensions') &&
+      (
+        (github.event.action == 'labeled' && github.event.label.name == 'run-bundling') ||
+        (github.event.action == 'synchronize' && contains(github.event.pull_request.labels.*.name, 'run-bundling'))
+      )
     runs-on: namespace-profile-32x64-ubuntu-2004
     env:
       CARGO_INCREMENTAL: 0
@@ -90,8 +96,11 @@ jobs:
     timeout-minutes: 60
   bundle_mac_aarch64:
     if: |-
-      (github.event.action == 'labeled' && github.event.label.name == 'run-bundling') ||
-      (github.event.action == 'synchronize' && contains(github.event.pull_request.labels.*.name, 'run-bundling'))
+      (github.repository_owner == 'zed-industries' || github.repository_owner == 'zed-extensions') &&
+      (
+        (github.event.action == 'labeled' && github.event.label.name == 'run-bundling') ||
+        (github.event.action == 'synchronize' && contains(github.event.pull_request.labels.*.name, 'run-bundling'))
+      )
     runs-on: namespace-profile-mac-large
     env:
       CARGO_INCREMENTAL: 0
@@ -134,8 +143,11 @@ jobs:
     timeout-minutes: 60
   bundle_mac_x86_64:
     if: |-
-      (github.event.action == 'labeled' && github.event.label.name == 'run-bundling') ||
-      (github.event.action == 'synchronize' && contains(github.event.pull_request.labels.*.name, 'run-bundling'))
+      (github.repository_owner == 'zed-industries' || github.repository_owner == 'zed-extensions') &&
+      (
+        (github.event.action == 'labeled' && github.event.label.name == 'run-bundling') ||
+        (github.event.action == 'synchronize' && contains(github.event.pull_request.labels.*.name, 'run-bundling'))
+      )
     runs-on: namespace-profile-mac-large
     env:
       CARGO_INCREMENTAL: 0
@@ -178,8 +190,11 @@ jobs:
     timeout-minutes: 60
   bundle_windows_aarch64:
     if: |-
-      (github.event.action == 'labeled' && github.event.label.name == 'run-bundling') ||
-      (github.event.action == 'synchronize' && contains(github.event.pull_request.labels.*.name, 'run-bundling'))
+      (github.repository_owner == 'zed-industries' || github.repository_owner == 'zed-extensions') &&
+      (
+        (github.event.action == 'labeled' && github.event.label.name == 'run-bundling') ||
+        (github.event.action == 'synchronize' && contains(github.event.pull_request.labels.*.name, 'run-bundling'))
+      )
     runs-on: self-32vcpu-windows-2022
     env:
       CARGO_INCREMENTAL: 0
@@ -222,8 +237,11 @@ jobs:
     timeout-minutes: 60
   bundle_windows_x86_64:
     if: |-
-      (github.event.action == 'labeled' && github.event.label.name == 'run-bundling') ||
-      (github.event.action == 'synchronize' && contains(github.event.pull_request.labels.*.name, 'run-bundling'))
+      (github.repository_owner == 'zed-industries' || github.repository_owner == 'zed-extensions') &&
+      (
+        (github.event.action == 'labeled' && github.event.label.name == 'run-bundling') ||
+        (github.event.action == 'synchronize' && contains(github.event.pull_request.labels.*.name, 'run-bundling'))
+      )
     runs-on: self-32vcpu-windows-2022
     env:
       CARGO_INCREMENTAL: 0
