--- a/.github/workflows/run_cron_unit_evals.yml
+++ b/.github/workflows/run_cron_unit_evals.yml
@@ -10,6 +10,7 @@ on:
   workflow_dispatch: {}
 jobs:
   cron_unit_evals:
+    if: (github.repository_owner == 'zed-industries' || github.repository_owner == 'zed-extensions')
     runs-on: namespace-profile-16x32-ubuntu-2204
     strategy:
       matrix:
