Add local LiveKit compose wiring and public server URL config

--- a/crates/collab/.env.toml
+++ b/crates/collab/.env.toml
@@ -5,6 +5,7 @@ HTTP_PORT = 8080
 API_TOKEN = "secret"
 ZED_ENVIRONMENT = "development"
 LIVEKIT_SERVER = "http://localhost:7880"
+LIVEKIT_PUBLIC_SERVER = "http://localhost:7880"
 LIVEKIT_KEY = "devkey"
 LIVEKIT_SECRET = "secret"
 BLOB_STORE_ACCESS_KEY = "the-blob-store-access-key"
