Implement collab agent presence and robust thread tab dedupe

--- a/crates/collab_ui/Cargo.toml
+++ b/crates/collab_ui/Cargo.toml
@@ -29,6 +29,7 @@ test-support = [
 ]
 
 [dependencies]
+agent_ui.workspace = true
 anyhow.workspace = true
 call.workspace = true
 channel.workspace = true
