--- a/crates/title_bar/Cargo.toml
+++ b/crates/title_bar/Cargo.toml
@@ -30,6 +30,7 @@ test-support = [
 
 [dependencies]
 anyhow.workspace = true
+agent_ui.workspace = true
 auto_update.workspace = true
 platform_title_bar.workspace = true
 call.workspace = true
