--- a/.github/workflows/background_agent_mvp.yml
+++ b/.github/workflows/background_agent_mvp.yml
@@ -30,6 +30,7 @@ env:
 
 jobs:
   run-mvp:
+    if: ${{ github.event_name != 'schedule' || github.repository == 'zed-industries/zed' }}
     runs-on: ubuntu-latest
     timeout-minutes: 180
 
